# MIMUW

./: .gitignore  .gitmodules  LICENSE  README.md
Advanced Operating Systems/: README.md
Advanced functional programming/: README.md
Advanced functional programming/coq/: coq.v
Assembly language programming/: README.md
Assembly language programming/01/: Makefile  README.md  err.c  err.h  life.asm  lifemain.c  test.sh
Assembly language programming/02/: Makefile  README.md  flow.asm  flowmain.c  test.sh
Assembly language programming/03/: Makefile  README.md  libppm.c  libppm.h  test.sh  zad3.s  zad3_main.c
Compiler construction/: README.md
Compiler construction/instant/: Makefile  README.md  instant-compiler.cabal  package.yaml
Compiler construction/latte/: Makefile  README.md  latte-compiler.cabal  package.yaml
Computer networks/: README.md
Computer networks/testhttp/: Makefile  README.md  err.c  testhttp  testhttp_raw.c
Computer networks/zad4/: Makefile  README.md  nk-client-udp.c  nk-server-udp.c
Computer networks/zad5/: Makefile  README.md  nk-client-tcp.c  nk-server-tcp.c
Computer networks/zad6/: Makefile  README.md  err.c  file-client-tcp.c  file-server-tcp.c
Computer networks/zad7/: Makefile  README.md  poll-server-telnet.c
Computer networks/zad8/: Makefile  err.c  err.h  time-client.c  time-server.c
Computer networks/zad9/: Makefile  myping.c
Concurrent programming/: README.md
Concurrent programming/async-c/: CMakeLists.txt  README.md  err.c  err.h  future.c  future.h  list.c  list.h  macierz.c  silnia.c  threadpool.c  threadpool.h
Concurrent programming/async-c/test/: CMakeLists.txt  await.c  defer.c  minunit.h
Concurrent programming/petri-net/: README.md
Deep neural networks/: Exercise_12.ipynb  Exercise_1_P3.ipynb  Exercise_2_P3.ipynb  Exercise_4_Logistic_Regression_P3.ipynb  Exercise_5_Softmax_Regression_P3.ipynb  Exercise_6_P3.ipynb  README.md
Deep neural networks/Assignment1/: Assignment1_1.ipynb  Assignment1_2.ipynb  Assignment1_3.ipynb
Deep neural networks/Assignment2/: Assignment2.ipynb
Deep neural networks/Assignment3/: Assignment3.ipynb
Distributed systems/: README.md
Distributed systems/dsassignment1/: Changelog.txt
Distributed systems/dsassignment1/public-tests/: Cargo.toml
Distributed systems/dsassignment1/public-tests/tests/: executors.rs
Distributed systems/dsassignment1/solution/: Cargo.toml  lib.rs
Distributed systems/dsassignment2/public-tests/: Cargo.toml
Distributed systems/dsassignment2/public-tests/tests/: atomic_register.rs  sectors_manager.rs  system.rs  transfer.rs
Distributed systems/dsassignment2/solution/: Cargo.toml
Distributed systems/dsassignment2/solution/src/: atomic_register_public.rs  common.rs  domain.rs  lib.rs  register_client_public.rs  register_process.rs  sectors_manager_public.rs  stable_storage_public.rs  transfer_public.rs
Distributed systems/dsassignment2/test-utils/: Cargo.toml  atomic_register.rs  lib.rs  system.rs  transfer.rs
Distributed systems/dslab01/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab02/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab03/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab04/: Cargo.toml
Distributed systems/dslab04/examples/: async_channel.rs  async_closure.rs  async_trait.rs  asynchronous.rs  futures.rs  tokio.rs
Distributed systems/dslab05/: Cargo.toml  certs.rs  main.rs  public_test.rs  solution.rs
Distributed systems/dslab05/examples/: aes_cbc.rs  hmac.rs  rsa.rs
Distributed systems/dslab05/examples/rustls/: main.rs
Distributed systems/dslab05/examples/tcp-communication/: client.rs  main.rs  server.rs
Distributed systems/dslab05/examples/udp-communication/: client.rs  main.rs  server.rs
Distributed systems/dslab06/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab07/: Cargo.toml
Distributed systems/dslab08/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab09/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab10/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab12/: Cargo.toml  main.rs  public_test.rs  solution.rs
Distributed systems/dslab13/: Cargo.toml  main.rs  public_test.rs  solution.rs
Individual programming project/: README.md
Individual programming project/Quantization/: README.md  makefile
Individual programming project/Routes/: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md  map.sh
Individual programming project/Routes/src/: city.c  city.h  datacheck.c  datacheck.h  gen_hashmap.c  gen_hashmap.h  gen_list.c  gen_list.h  gen_pqueue.c  gen_pqueue.h  input.c  input.h  map.c  map.h  map_main.c  output.c  output.h  process.c  process.h  road.c  road.h  route.c  route.h
Languages and Tools for Programming I (C++)/: README.md
Languages and tools for programming II (Microservices)/: README.md
Languages and tools for programming III (Haskell)/: README.md
Languages and tools for programming III (Haskell)/sokoban1/: ZADANIE.md  sokoban1.hs
Languages and tools for programming III (Haskell)/sokoban2/: README.md  sokoban2.hs
Languages and tools for programming III (Haskell)/sokoban3/: README.md  sokoban3.hs
Languages and tools for programming III (Haskell)/sokoban4/: README.md  sokoban.hs
Languages and tools for programming III (Haskell)/sokoban5/: README.md  sokoban.hs
Languages and tools for programming III (Haskell)/supply/: README.md  Supply.hs
Logics for computer scientists/: README.md
Object-oriented programming/: README.md
Object-oriented programming/Construction/: README.md
Object-oriented programming/Lucene/: README.md  pom.xml
Operating systems/: README.md
Operating systems/dcl/: README.md  dcl.asm
Operating systems/pix/: README.md  pix.asm
Practical distributed systems/: README.md
Probability theory and statistics/: README.md
Programming languages and paradigms/: README.md
Software engineering/: README.md
Web applications/: README.md
(+240 files in other folders)
