[package]
name = "lab-05"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2018"

[dependencies]
hmac = "0.11"
sha2 = "0.9"
crossbeam-channel = "0.5"
rustls = "0.20"
rustls-pemfile = "0.2"

[dev-dependencies]
ntest = "0.7"
kolmogorov_smirnov = "1.1"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2"
aes = "0.7"
block-modes = "0.8"
rand = "0.8"
rsa = "0.5"

[[bin]]
name = "lab05"
path = "main.rs"
