[package]
name = "lab-08"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.14", features = ["full"] }
bytes = "1.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
async-trait = "0.1"
log = "0.4"
async-channel = "1.6"
executor = { path = "../../dsassignment1/solution/", package = "assignment-1-solution" }

[[bin]]
name = "lab08"
path = "main.rs"
