[package]
name = "lab-10"
version = "0.2.0"
authors = ["Wojciech Ciszewski <wc385540@students.mimuw.edu.pl>", "Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
async-channel = "1.6"
async-trait = "0.1"
tokio = {version = "1.14", features = ["full"] }
executor = { path = "../../dsassignment1/solution/", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.7"

[[bin]]
name = "lab10"
path = "main.rs"
