[package]
name = "assignment-1-public-tests"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2018"

[dependencies]
assignment-1-solution = { path = "../solution" }
async-trait = "0.1"
tokio = {version = "1.12", features = ["full"] }
async-channel = "1.6"

[dev-dependencies]
ntest = "0.7"
