[package]
name = "assignment-1-solution"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2018"

# Use exactly these main dependencies:
[dependencies]
async-trait = "0.1"
tokio = {version = "1.12", features = ["full"] }
async-channel = "1.6"
log = { version = "0.4" }

[lib]
name = "assignment_1_solution"
path = "lib.rs"
