[package]
name = "assignment-2-solution"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <wc385540@students.mimuw.edu.pl>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
tokio = {version = "1.13", features = ["full"] }
bytes = "1.1"
bincode = "1.3"
hmac = "0.11"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
async-channel = "1.6"

[lib]
name = "assignment_2_solution"
path = "src/lib.rs"
